// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxModalContent customize 1`] = `
<div>
  <div
    class="modal-content bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxModalContent component 1`] = `
<div>
  <div
    class="modal-content"
  >
    Test
  </div>
</div>
`;
